--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,28 +1,27 @@
-
 <div class="main-content container-fluid">
   <div class="row">
     <div class="col-lg-6">
       <div class="card card-border-color card-border-color-primary">
-        <div class="card-header card-header-divider">Register</div>
+        <div class="card-header card-header-divider">Login</div>
         <div class="card-body">
-          <form data-parsley-validate="" novalidate="">
+          <form #loginForm="ngForm" (ngSubmit)="login()">
             <div class="form-group row">
               <label class="col-3 col-lg-2 col-form-label text-right" for="inputEmail2">Email</label>
               <div class="col-9 col-lg-10">
-                <input class="form-control" id="inputEmail2" type="email" required="" parsley-type="email" placeholder="Email">
+                <input class="form-control" id="emailid" name="emailid" type="text" placeholder="Email Id" required="" [(ngModel)]="model.emailid">
               </div>
             </div>
             <div class="form-group row">
               <label class="col-3 col-lg-2 col-form-label text-right" for="inputPassword2">Password</label>
               <div class="col-9 col-lg-10">
-                <input class="form-control" id="inputPassword2" type="password" required="" placeholder="Password">
+                <input class="form-control" id="password"  name="password" type="password" required="" placeholder="Password" [(ngModel)]="model.password">
               </div>
             </div>
            
             <div class="row pt-2 pt-sm-5 mt-1">
               <div class="col-sm-6 pl-0">
                 <p class="text-right">
-                  <button class="btn btn-space btn-primary" type="submit">Submit</button>
+                  <button class="btn btn-space btn-primary" type="submit" >Submit</button>
                   <button class="btn btn-space btn-secondary">Cancel</button>
                 </p>
               </div>
