--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="main-content container-fluid">
   <div class="row">
-    <div class="col-lg-6">
+    <div class="col-lg-8">
       <div class="card card-border-color card-border-color-primary">
         <div class="card-header card-header-divider">Login</div>
         <div class="card-body">
@@ -21,8 +21,8 @@
             <div class="row pt-2 pt-sm-5 mt-1">
               <div class="col-sm-6 pl-0">
                 <p class="text-right">
-                  <button class="btn btn-space btn-primary" type="submit" >Submit</button>
-                  <button class="btn btn-space btn-secondary">Cancel</button>
+                  <button class="btn btn-space btn-primary" type="submit" [disabled]="!loginForm.valid">Login</button>
+                  
                 </p>
               </div>
             </div>
