--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,24 +1,24 @@
 <div class="main-content container-fluid">
   <div class="row">
-    <div class="col-lg-6">
+    <div class="col-lg-12">
       <div class="card card-border-color card-border-color-primary">
         <div class="card-header card-header-divider">Register</div>
         <div class="card-body">
-          <form #ngRegister="ngForm" (ngSubmit)="register()">
+          <form #registerForm="ngForm" (ngSubmit)="register()">
             <div class="form-group row">
-              <label class="col-3 col-lg-2 col-form-label text-right" for="inputEmail2">Email</label>
+              <label class="col-3 col-lg-2 col-form-label text-right">Email</label>
               <div class="col-9 col-lg-10">
                 <input class="form-control" id="emailid" name="emailid" type="text" required placeholder="Email" [(ngModel)]="model.emailid" >
               </div>
             </div>
             <div class="form-group row">
-              <label class="col-3 col-lg-2 col-form-label text-right" for="inputEmail2">Mobile No</label>
+              <label class="col-3 col-lg-2 col-form-label text-right">Mobile No</label>
               <div class="col-9 col-lg-10">
                 <input class="form-control" id="mobileno" name="mobileno" type="text" required placeholder="Mobile No" [(ngModel)]="model.mobileno">
               </div>
             </div>
             <div class="form-group row">
-              <label class="col-3 col-lg-2 col-form-label text-right" for="inputPassword2" >Password</label>
+              <label class="col-3 col-lg-2 col-form-label text-right">Password</label>
               <div class="col-9 col-lg-10">
                 <input class="form-control" id="password" name="password" type="password" required placeholder="Password" [(ngModel)]="model.password">
               </div>
@@ -27,8 +27,7 @@
             <div class="row pt-2 pt-sm-5 mt-1">
               <div class="col-sm-6 pl-0">
                 <p class="text-right">
-                  <button class="btn btn-space btn-primary" type="submit">Submit</button>
-                  <button class="btn btn-space btn-secondary">Cancel</button>
+                  <button class="btn btn-space btn-primary" type="submit" [disabled]="!registerForm.valid">Register</button>
                 </p>
               </div>
             </div>
