--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,12 +10,16 @@
               <div class="col-9 col-lg-10">
                 <input class="form-control" id="emailid" name="emailid" type="text" placeholder="Email Id" required="" [(ngModel)]="model.emailid">
               </div>
+              <div *ngIf="" [ngClass] = "'validation-message'">  
+                EmailId not valid.  
+              </div>   
             </div>
             <div class="form-group row">
               <label class="col-3 col-lg-2 col-form-label text-right" for="inputPassword2">Password</label>
               <div class="col-9 col-lg-10">
                 <input class="form-control" id="password"  name="password" type="password" required="" placeholder="Password" [(ngModel)]="model.password">
               </div>
+              
             </div>
            
             <div class="row pt-2 pt-sm-5 mt-1">
