--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,20 +8,18 @@
             <div class="form-group row">
               <label class="col-3 col-lg-2 col-form-label text-right" for="inputEmail2">Email</label>
               <div class="col-9 col-lg-10">
-                <input class="form-control" id="emailid" name="emailid" type="text" placeholder="Email Id" required="" [(ngModel)]="model.emailid">
+                <input #emailid="ngModel" class="form-control" id="emailid" name="emailid" type="text" placeholder="Email Id" required="" [(ngModel)]="model.emailid">
               </div>
-              <div *ngIf="" [ngClass] = "'validation-message'">  
-                EmailId not valid.  
-              </div>   
+              <div class="validation-error" *ngIf="emailid.invalid && emailid.touched">
+                Please enter a email
+            </div>   
             </div>
             <div class="form-group row">
               <label class="col-3 col-lg-2 col-form-label text-right" for="inputPassword2">Password</label>
               <div class="col-9 col-lg-10">
                 <input class="form-control" id="password"  name="password" type="password" required="" placeholder="Password" [(ngModel)]="model.password">
               </div>
-              
             </div>
-           
             <div class="row pt-2 pt-sm-5 mt-1">
               <div class="col-sm-6 pl-0">
                 <p class="text-right">
